<resources>
    <string name="app_name">FinalAplication</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>

    <string name="app_nome">Calculadora de Média</string>
    <string name="calcularmedia">Calcular Média</string>
    <string name="nota1">1º Nota:</string>
    <string name="nota2">2º Nota:</string>
    <string name="nota3">3º Nota:</string>
    <string name="nota4">4º Nota:</string>
    <string name="btn_calcular">Calcular</string>
    <string name="resultado">Resultado</string>
    <string name="resul">""</string>
    <string name="nota_1">""</string>
    <string name="nota_2">""</string>
    <string name="nota_3">""</string>
    <string name="nota_4">""</string>

    <string name="app_nam">CALCULADORA</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_6">6</string>
    <string name="btn_5">5</string>
    <string name="btn_4">4</string>
    <string name="btn_3">3</string>
    <string name="btn_2">2</string>
    <string name="btn_1">1</string>
    <string name="btn_0">0</string>
    <string name="btnSoma">+</string>
    <string name="btnSubtracao">-</string>
    <string name="btnDivisao">/</string>
    <string name="btnMultiplicacao">x</string>
    <string name="btnClear">C</string>
    <string name="btnvirgula">,</string>
    <string name="btnigual"> = </string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="asterisco">*</string>
    <string name="n0">0</string>
    <string name="hashtag">#</string>
    <string name="ligar">Ligar</string>
    <string name="apagar">apagar</string>
</resources>
